--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Las mejores recetas | SaborEspañol</title>
         <link rel="stylesheet" href="estilos.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
     </head>
     <header >
         <img height="110" src="Img/Logo.png" alt="Logo de Sabor Español">
@@ -14,6 +15,7 @@
         </nav>
     </header>
     <body>
-        
+        <h1 id="titulo">SABOR ESPAÑOL</h1>
+        <h2 id="subtitulo">Recetas fáciles</h2>
     </body>
 </html>
