--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <link rel="icon" href="Img/Logo recortado.png">
-        <title>Las mejores recetas | SaborEspañol</title>
+        <title>Bienvenido a la cocina española | SaborEspañol</title>
         <link rel="stylesheet" href="estilos.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
     </head>
     <header >
         <img height="110" src="Img/Logo.png" alt="Logo de Sabor Español">
@@ -18,4 +17,9 @@
         <h1 id="titulo">SABOR ESPAÑOL</h1>
         <h2 id="subtitulo">Recetas fáciles</h2>
     </body>
+    <footer>
+        <h3>Sabor Español</h3>
+        <a href="mailto:saborespanolinfo@gmail.com">saborespanolinfo@gmail.com</a>
+        <p>©2024 por Sabor Español. Creado como hobby</p>
+    </footer>
 </html>
