footer añadido a recetas

--- a/recetas.html
+++ b/recetas.html
@@ -16,4 +16,9 @@
     <body>
         
     </body>
+    <footer>
+        <h3>Sabor Español</h3>
+        <a href="mailto:saborespanolinfo@gmail.com">saborespanolinfo@gmail.com</a>
+        <p>©2024 por Sabor Español. Creado como hobby</p>
+    </footer>
 </html>
