--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
         </nav>
     </header>
     <body>
-        <h1 id="titulo">SABOR ESPAÑOL</h1>
-        <h2 id="subtitulo">Recetas fáciles</h2>
+        <section id="bienvenida">
+            <h1 id="titulo">SABOR ESPAÑOL</h1>
+            <h2 id="subtitulo">Recetas fáciles</h2>
+        </section>
+
+        <section id="galeria">
+            <img src="Img/Fabada.jpg" alt="Imagen de un plato de 
+            fabada española">
+        </section>
     </body>
     <footer>
         <h3>Sabor Español</h3>
