--- a/recetas.html
+++ b/recetas.html
@@ -14,7 +14,16 @@
         </nav>
     </header>
     <body>
-        
+        <section id="recetas">
+            <h1>Recetas</h1>
+            <div class="receta">
+                <h1>Tortilla de patata</h1>
+                <p>Esta tradicional receta de tortilla de patata es una muy buena 
+                    opción para una comida el findesemana.
+                </p>
+                <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
+            </div>
+        </section>
     </body>
     <footer>
         <h3>Sabor Español</h3>
