Cartas de las recetas acabadas

--- a/recetas.html
+++ b/recetas.html
@@ -14,9 +14,30 @@
         </nav>
     </header>
     <body>
+        <h1>Recetas</h1>
         <section id="recetas">
-            <h1>Recetas</h1>
-            <div class="receta">
+            <div class="receta" id="Tortilla de patata">
+                <h1>Tortilla de patata</h1>
+                <p>Esta tradicional receta de tortilla de patata es una muy buena 
+                    opción para una comida el findesemana.
+                </p>
+                <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
+            </div>
+            <div class="receta" id="Tortilla de patata">
+                <h1>Tortilla de patata</h1>
+                <p>Esta tradicional receta de tortilla de patata es una muy buena 
+                    opción para una comida el findesemana.
+                </p>
+                <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
+            </div>
+            <div class="receta" id="Tortilla de patata">
+                <h1>Tortilla de patata</h1>
+                <p>Esta tradicional receta de tortilla de patata es una muy buena 
+                    opción para una comida el findesemana.
+                </p>
+                <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
+            </div>
+            <div class="receta" id="Tortilla de patata">
                 <h1>Tortilla de patata</h1>
                 <p>Esta tradicional receta de tortilla de patata es una muy buena 
                     opción para una comida el findesemana.
