4 recetas añadidas y animaciones de las cartas

--- a/recetas.html
+++ b/recetas.html
@@ -14,35 +14,38 @@
         </nav>
     </header>
     <body>
-        <h1>Recetas</h1>
+        <h1 id="titulorec">Recetas</h1>
         <section id="recetas">
             <div class="receta" id="Tortilla de patata">
                 <h1>Tortilla de patata</h1>
-                <p>Esta tradicional receta de tortilla de patata es una muy buena 
-                    opción para una comida el findesemana.
+                <p>Esta emblemática tortilla española de patatas es una 
+                    elección reconfortante para cualquier momento del día.
                 </p>
                 <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
             </div>
-            <div class="receta" id="Tortilla de patata">
-                <h1>Tortilla de patata</h1>
-                <p>Esta tradicional receta de tortilla de patata es una muy buena 
-                    opción para una comida el findesemana.
+            <div class="receta" id="Fabada">
+                <h1>Fabada</h1>
+                <p>Esta clásica receta de fabada asturiana es la elección 
+                    perfecta para un reconfortante almuerzo o cena en 
+                    cualquier día de la semana.
                 </p>
-                <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
+                <img src="Img/Fabada.jpg" alt="Plato de fabada">
             </div>
-            <div class="receta" id="Tortilla de patata">
-                <h1>Tortilla de patata</h1>
-                <p>Esta tradicional receta de tortilla de patata es una muy buena 
-                    opción para una comida el findesemana.
+            <div class="receta" id="Gazpacho">
+                <h1>Gazpacho</h1>
+                <p>Este refrescante gazpacho andaluz es una opción 
+                    deliciosa para disfrutar en los días calurosos de 
+                    verano.
                 </p>
-                <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
+                <img src="Img/Gazpacho.jpg" alt="Plato de Gazpacho">
             </div>
-            <div class="receta" id="Tortilla de patata">
-                <h1>Tortilla de patata</h1>
-                <p>Esta tradicional receta de tortilla de patata es una muy buena 
-                    opción para una comida el findesemana.
+            <div class="receta" id="Paella">
+                <h1>Paella</h1>
+                <p>Esta exquisita paella valenciana es un festín para los 
+                    sentidos, perfecta para compartir con amigos y 
+                    familia en una tarde soleada.
                 </p>
-                <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
+                <img src="Img/Paella.jpg" alt="Plato de paella">
             </div>
         </section>
     </body>
