6 recetas, mejora de las cartas y mejores textos/imagenes

--- a/recetas.html
+++ b/recetas.html
@@ -47,6 +47,22 @@
                 </p>
                 <img src="Img/Paella.jpg" alt="Plato de paella">
             </div>
+            <div class="receta" id="Croquetas de jamón">
+                <h1>Croquetas de jamón</h1>
+                <p>Estas deliciosas croquetas caseras son el complemento 
+                    perfecto para cualquier comida o simplemente como un 
+                    tentempié irresistible.
+                </p>
+                <img src="Img/Croquetas.jpg" alt="Plato de croquetas">
+            </div>
+            <div class="receta" id="Tortilla Francesa">
+                <h1>Tortilla Francesa</h1>
+                <p>Esta clásica tortilla francesa, con su simplicidad y 
+                    sabor delicado, es una opción ideal para un desayuno 
+                    rápido, o una cena ligera.
+                </p>
+                <img src="Img/Tortilla Francesa.jpg" alt="Plato de tortilla francesa">
+            </div>
         </section>
     </body>
     <footer>
