Botones añadidos a las recetas y fotos creadas por nosotros añadidas

--- a/recetas.html
+++ b/recetas.html
@@ -16,53 +16,52 @@
     <body>
         <h1 id="titulorec">Recetas</h1>
         <section id="recetas">
-            <div class="receta" id="Tortilla de patata">
+            <a class="receta" id="Tortilla de patata" href="tortillapatata.html">
                 <h1>Tortilla de patata</h1>
                 <p>Esta emblemática tortilla española de patatas es una 
                     elección reconfortante para cualquier momento del día.
                 </p>
                 <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
-            </div>
-            <div class="receta" id="Fabada">
+            </a>
+            <a class="receta" id="Fabada" href="fabada.html">
                 <h1>Fabada</h1>
                 <p>Esta clásica receta de fabada asturiana es la elección 
                     perfecta para un reconfortante almuerzo o cena en 
                     cualquier día de la semana.
                 </p>
                 <img src="Img/Fabada.jpg" alt="Plato de fabada">
-            </div>
-            <div class="receta" id="Gazpacho">
+            </a>
+            <a class="receta" id="Gazpacho" href="gazpacho.html">
                 <h1>Gazpacho</h1>
                 <p>Este refrescante gazpacho andaluz es una opción 
                     deliciosa para disfrutar en los días calurosos de 
                     verano.
                 </p>
                 <img src="Img/Gazpacho.jpg" alt="Plato de Gazpacho">
-            </div>
-            <div class="receta" id="Paella">
+            </a>
+            <a class="receta" id="Paella" href="paella.html">
                 <h1>Paella</h1>
                 <p>Esta exquisita paella valenciana es un festín para los 
                     sentidos, perfecta para compartir con amigos y 
                     familia en una tarde soleada.
                 </p>
                 <img src="Img/Paella.jpg" alt="Plato de paella">
-            </div>
-            <div class="receta" id="Croquetas de jamón">
+            </a>
+            <a class="receta" id="Croquetas de jamón" href="croquetas.html">
                 <h1>Croquetas de jamón</h1>
                 <p>Estas deliciosas croquetas caseras son el complemento 
                     perfecto para cualquier comida o simplemente como un 
                     tentempié irresistible.
                 </p>
                 <img src="Img/Croquetas.jpg" alt="Plato de croquetas">
-            </div>
-            <div class="receta" id="Tortilla Francesa">
+            </a>
+            <a class="receta" id="Tortilla Francesa" href="tortilla.html">
                 <h1>Tortilla Francesa</h1>
-                <p>Esta clásica tortilla francesa, con su simplicidad y 
-                    sabor delicado, es una opción ideal para un desayuno 
-                    rápido, o una cena ligera.
+                <p>La tortilla francesa, aunque su nombre sugiere lo contrario, es un 
+                    plato clásico de la cocina española.
                 </p>
-                <img src="Img/Tortilla Francesa.jpg" alt="Plato de tortilla francesa">
-            </div>
+                <img src="Img/Recetas/Recetas añadidas/Tortilla Francesa/5. Plato final1.jpg" alt="Plato de tortilla francesa">
+            </a>
         </section>
     </body>
     <footer>
