--- a/tortilla.html
+++ b/tortilla.html
@@ -14,14 +14,8 @@
         </nav>
     </header>
     <body>
-        <section id="bienvenida">
-            <h1 id="titulo">SABOR ESPAÑOL</h1>
-            <h2 id="subtitulo">Recetas fáciles</h2>
-        </section>
-
-        <section id="galeria">
-            <img src="Img/Fabada.jpg" alt="Imagen de un plato de 
-            fabada española">
+        <section id="ingredientes">
+            <tr></tr>
         </section>
     </body>
     <footer>
