imagenes optimizadas a .webp

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
 
         <section id="galeria">
-            <img src="Img/Fabada.jpg" alt="Imagen de un plato de 
+            <img src="Img/Fabada.webp" alt="Imagen de un plato de 
             fabada española">
         </section>
     </body>
