--- a/recetas.html
+++ b/recetas.html
@@ -21,7 +21,7 @@
                 <p>Esta emblemática tortilla española de patatas es una 
                     elección reconfortante para cualquier momento del día.
                 </p>
-                <img src="Img/Tortilla de Patata.jpg" alt="Plato de trotilla de patata">
+                <img src="Img/Tortilla de Patata.webp" alt="Plato de trotilla de patata">
             </a>
             <a class="receta" id="Fabada" href="fabada.html">
                 <h1>Fabada</h1>
@@ -29,7 +29,7 @@
                     perfecta para un reconfortante almuerzo o cena en 
                     cualquier día de la semana.
                 </p>
-                <img src="Img/Fabada.jpg" alt="Plato de fabada">
+                <img src="Img/Fabada.webp" alt="Plato de fabada">
             </a>
             <a class="receta" id="Gazpacho" href="gazpacho.html">
                 <h1>Gazpacho</h1>
@@ -37,7 +37,7 @@
                     deliciosa para disfrutar en los días calurosos de 
                     verano.
                 </p>
-                <img src="Img/Gazpacho.jpg" alt="Plato de Gazpacho">
+                <img src="Img/Gazpacho.webp" alt="Plato de Gazpacho">
             </a>
             <a class="receta" id="Paella" href="paella.html">
                 <h1>Paella</h1>
@@ -45,7 +45,7 @@
                     sentidos, perfecta para compartir con amigos y 
                     familia en una tarde soleada.
                 </p>
-                <img src="Img/Paella.jpg" alt="Plato de paella">
+                <img src="Img/Paella.webp" alt="Plato de paella">
             </a>
             <a class="receta" id="Croquetas de jamón" href="croquetas.html">
                 <h1>Croquetas de jamón</h1>
@@ -60,7 +60,7 @@
                 <p>La tortilla francesa, aunque su nombre sugiere lo contrario, es un 
                     plato clásico de la cocina española.
                 </p>
-                <img src="Img/Recetas/Recetas añadidas/Tortilla Francesa/5. Plato final1.jpg" alt="Plato de tortilla francesa">
+                <img src="Img/Recetas/Recetas añadidas/Tortilla Francesa/5. Plato final1.webp" alt="Plato de tortilla francesa">
             </a>
         </section>
     </body>
