--- a/tortilla.html
+++ b/tortilla.html
@@ -15,7 +15,9 @@
     </header>
     <body>
         <section id="ingredientes">
-            <tr></tr>
+            <table>
+                <tr></tr>
+            </table>
         </section>
     </body>
     <footer>
