errores de imagenes arreglados

--- a/recetas.html
+++ b/recetas.html
@@ -53,7 +53,7 @@
                     perfecto para cualquier comida o simplemente como un 
                     tentempié irresistible.
                 </p>
-                <img src="Img/Croquetas.jpg" alt="Plato de croquetas">
+                <img src="Img/Croquetas.webp" alt="Plato de croquetas">
             </a>
             <a class="receta" id="Tortilla Francesa" href="tortilla.html">
                 <h1>Tortilla Francesa</h1>
